# skills-introduction-to-github

./: README.md
648mahts-data-collect/: Makefile  check_coll.sh  common.mk  config.mk  sgo.conf  sgocoll.service
648mahts-data-collect/app/: Makefile  main.cpp  sgo_conf.cpp  sgo_log.cpp  sgo_printf.cpp  sgo_string.cpp
648mahts-data-collect/include/: CallbackQueue.h  ams_pc.h  ams_sau.h  blockqueue.h  buzzer.h  bytesUtil.h  cMqttClient.h  constants.h  crc16.h  extend_alarm_panel.h  mainService.h  sgo_ams_mods.h  sgo_collect_data.h  sgo_conf.h  sgo_func.h  sgo_global.h  sgo_macro.h  sgo_sub_pub.h  tcpclient.h
648mahts-data-collect/include/sgo_ams/: co2_system.h  (+22 more)
648mahts-data-collect/modbus/: modbus.cpp
648mahts-data-collect/modules/: air_conditioner_refrigeration_system.cpp  ams_pc.cpp  ams_sau.cpp  baudouin_main_generator.cpp  bow_thruster.cpp  buzzer.cpp  co2_system.cpp  compressed_air_system.cpp  cooling_water_system.cpp  e_r_charger_and_discharger_panel.cpp  emergency_generator.cpp  extend_alarm_panel.cpp  gas_detection_system.cpp  general_charger_and_discharger_panel.cpp  harbo_generator.cpp  level_gauging.cpp  level_switch.cpp  main_diesel_generator.cpp  main_propulsion.cpp  main_transformer.cpp  miscellaneous.cpp  msb.cpp  port_azimuth_center_control_cabinet.cpp  power_system.cpp  power_system2.cpp  sewage_treatment_plant.cpp  stbd_azimuth_center_control_cabinet.cpp
648mahts-data-collect/mqtt/: cMqttClient.cpp  makefile
648mahts-data-collect/network/: makefile  tcpclient.cpp
648mahts-data-collect/service/: CallbackQueue.cpp  mainService.cpp  makefile
648mahts-data-collect/util/: bytesUtil.cpp  crc16.cpp
test/cpp-project/: CMakeLists.txt
test/cpp-project/include/DataTree/: DeviceData.h  ModbusTcpTree.h  modbus.cpp  modbus.h
test/cpp-project/include/utils/: HashRWLock.h  MurmurHash.h  Noncopyable.h  ReadWriteLock.h  SingletonEx.h  timeUtil.h
test/cpp-project/src/: CMakeLists.txt  main.cpp
test/cpp-project/src/DataTree/: CMakeLists.txt  DeviceData.cpp  ModbusTcpTree.cpp  modbus.cpp
test/cpp-project/src/utils/: CMakeLists.txt  CallbackQueue.cpp  timeUtil.cpp  utils.cpp
test/cpp-project/test/: CMakeLists.txt  device_data_test.cpp  main_test.cpp
